--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.4.1
   crypto: ^3.0.7
   font_awesome_flutter: ^10.9.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
